# Game_Of_Life

./: .gitignore  README.md  temp.cpp
build-tests/: CMakeCache.txt  Makefile  cmake_install.cmake
cpp/: CMakeLists.txt
cpp/include/gol/: Cell.hpp  Grid.hpp  Notes.txt
cpp/src/: Cell.cpp  Grid.cpp  main.cpp
cpp/tests/: test_grid.cpp
scripts/: run_dev.ps1  run_tests.ps1
